# opensoundscape_cnn

./: .gitignore  README.md  pyproject.toml  train_cnn.ipynb  train_cnn.py
